--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,7 @@
 </head>
 <body ng-controller="mainController">
     <div ui-view="header"></div>
+    <div ui-view="promo"></div>
     <div ui-view="left"></div>
     <div ui-view="content"></div>
     <div ui-view="footer"></div>
